--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,4 @@
-<h1>タスクリスト</h1>
+<h1>タスクリスト一覧</h1>
 
 <ul>
 <% @tasks.each do |task| %>
@@ -7,6 +7,8 @@
 <%= link_to task.id, task %>
 
 <%= task.content %>
+&gt;
+<%= task.status %>
 </li>
 
 <% end %>
